[package]
name = "transmitter"
version = "0.1.0"
authors = ["ftilde <ftilde@tamepointer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cpal = "0.12"
cpal = { git = 'https://github.com/RustAudio/cpal' } # Due to https://github.com/RustAudio/cpal/issues/461
byte-slice-cast = "0.3"
